--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="CharacterSheet",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
++ActionMappings=(ActionName="LeftAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
